updated the auth message
